fix color contrast issues by adjusting global app colors scss

--- a/src/css/base/utility.scss
+++ b/src/css/base/utility.scss
@@ -45,7 +45,7 @@ $color-map: (
 }
 
 .disabled, [disabled] {
-  opacity: 0.4 !important;
+  opacity: 0.54 !important;
 }
 
 .overlay {
