--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -32,11 +32,11 @@ $input-font-size: .95rem;
 
 // quasar color variables
 $primary   : #000068;
-$secondary : #9999C2;
-$accent    : #3385FF;
+$secondary : #7b7bc1;
+$accent    : #0a6cff;
 $dark      : #1D1D1D;
 $dark-page : #121212;
-$positive  : #21BA45;
+$positive  : #1a8000;
 $negative  : #a00000;
 $info      : #31CCEC;
 $warning   : #F2C037;
